# small_texteditor

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.hpp  resume.cpp  resume.hpp  resume.ui  textedit.cpp  textedit.hpp
